--- a/godaddy.html
+++ b/godaddy.html
@@ -6319,7 +6319,7 @@ function get_each_context_5(ctx, list, i) {
 	return child_ctx;
 }
 
-// (233:4) {#each envOptions as envOption}
+// (235:4) {#each envOptions as envOption}
 function create_each_block_5(ctx) {
 	let option;
 	let t_value = /*envOption*/ ctx[43] + "";
@@ -6344,7 +6344,7 @@ function create_each_block_5(ctx) {
 	};
 }
 
-// (232:2) <Select bind:node prop="environment">
+// (234:2) <Select bind:node prop="environment">
 function create_default_slot_6(ctx) {
 	let each_1_anchor;
 	let each_value_5 = /*envOptions*/ ctx[8];
@@ -6400,7 +6400,7 @@ function create_default_slot_6(ctx) {
 	};
 }
 
-// (238:4) {#each swaggerOptions as swaggerOption}
+// (240:4) {#each swaggerOptions as swaggerOption}
 function create_each_block_4(ctx) {
 	let option;
 	let t_value = /*swaggerOption*/ ctx[40].label + "";
@@ -6425,7 +6425,7 @@ function create_each_block_4(ctx) {
 	};
 }
 
-// (237:2) <Select bind:node prop="openApiUrl" on:change={createApi}>
+// (239:2) <Select bind:node prop="openApiUrl" on:change={createApi}>
 function create_default_slot_5(ctx) {
 	let each_1_anchor;
 	let each_value_4 = /*swaggerOptions*/ ctx[9];
@@ -6481,7 +6481,7 @@ function create_default_slot_5(ctx) {
 	};
 }
 
-// (260:6) {:else}
+// (262:6) {:else}
 function create_else_block_3(ctx) {
 	let option;
 	let t_value = /*api*/ ctx[37] + "";
@@ -6513,7 +6513,7 @@ function create_else_block_3(ctx) {
 	};
 }
 
-// (258:6) {#if node.api === api}
+// (260:6) {#if node.api === api}
 function create_if_block_5(ctx) {
 	let option;
 	let t_value = /*api*/ ctx[37] + "";
@@ -6546,7 +6546,7 @@ function create_if_block_5(ctx) {
 	};
 }
 
-// (257:4) {#each apis as api}
+// (259:4) {#each apis as api}
 function create_each_block_3(ctx) {
 	let if_block_anchor;
 
@@ -6587,7 +6587,7 @@ function create_each_block_3(ctx) {
 	};
 }
 
-// (255:2) <Select bind:node prop="api">
+// (257:2) <Select bind:node prop="api">
 function create_default_slot_4(ctx) {
 	let option;
 	let t;
@@ -6655,7 +6655,7 @@ function create_default_slot_4(ctx) {
 	};
 }
 
-// (273:8) {:else}
+// (275:8) {:else}
 function create_else_block_2(ctx) {
 	let option;
 	let t_value = /*operations*/ ctx[5][/*key*/ ctx[34]].summary + "";
@@ -6687,7 +6687,7 @@ function create_else_block_2(ctx) {
 	};
 }
 
-// (269:8) {#if node.operation === operations[key].operationId}
+// (271:8) {#if node.operation === operations[key].operationId}
 function create_if_block_4(ctx) {
 	let option;
 	let t_value = /*operations*/ ctx[5][/*key*/ ctx[34]].summary + "";
@@ -6720,7 +6720,7 @@ function create_if_block_4(ctx) {
 	};
 }
 
-// (268:6) {#each Object.entries(operations) as [key]}
+// (270:6) {#each Object.entries(operations) as [key]}
 function create_each_block_2(ctx) {
 	let if_block_anchor;
 
@@ -6761,7 +6761,7 @@ function create_each_block_2(ctx) {
 	};
 }
 
-// (266:4) <Select bind:node prop="operation">
+// (268:4) <Select bind:node prop="operation">
 function create_default_slot_3(ctx) {
 	let option;
 	let t;
@@ -6829,7 +6829,7 @@ function create_default_slot_3(ctx) {
 	};
 }
 
-// (280:4) {#if { operationDescription }}
+// (282:4) {#if { operationDescription }}
 function create_if_block_3(ctx) {
 	let div2;
 	let div0;
@@ -6866,7 +6866,7 @@ function create_if_block_3(ctx) {
 	};
 }
 
-// (292:6) {:else}
+// (294:6) {:else}
 function create_else_block_1(ctx) {
 	let option;
 	let t_value = /*contentType*/ ctx[31] + "";
@@ -6898,7 +6898,7 @@ function create_else_block_1(ctx) {
 	};
 }
 
-// (290:6) {#if node.contentType === contentType}
+// (292:6) {#if node.contentType === contentType}
 function create_if_block_2(ctx) {
 	let option;
 	let t_value = /*contentType*/ ctx[31] + "";
@@ -6931,7 +6931,7 @@ function create_if_block_2(ctx) {
 	};
 }
 
-// (289:4) {#each contentTypes as contentType}
+// (291:4) {#each contentTypes as contentType}
 function create_each_block_1(ctx) {
 	let if_block_anchor;
 
@@ -6972,7 +6972,7 @@ function create_each_block_1(ctx) {
 	};
 }
 
-// (288:2) <Select bind:node prop="contentType">
+// (290:2) <Select bind:node prop="contentType">
 function create_default_slot_2(ctx) {
 	let each_1_anchor;
 	let each_value_1 = /*contentTypes*/ ctx[1];
@@ -7028,7 +7028,7 @@ function create_default_slot_2(ctx) {
 	};
 }
 
-// (347:2) {:else}
+// (349:2) {:else}
 function create_else_block(ctx) {
 	let div;
 
@@ -7051,7 +7051,7 @@ function create_else_block(ctx) {
 	};
 }
 
-// (301:2) {#if node.parameters.length > 0}
+// (303:2) {#if node.parameters.length > 0}
 function create_if_block(ctx) {
 	let editablelist;
 	let updating_elements;
@@ -7117,7 +7117,7 @@ function create_if_block(ctx) {
 	};
 }
 
-// (341:6) {#if param?.schema?.type === "object"}
+// (343:6) {#if param?.schema?.type === "object"}
 function create_if_block_1(ctx) {
 	let div;
 	let jsonparamhelper;
@@ -7157,7 +7157,7 @@ function create_if_block_1(ctx) {
 	};
 }
 
-// (302:4) <EditableList bind:elements={node.parameters} let:element={param} let:index>
+// (304:4) <EditableList bind:elements={node.parameters} let:element={param} let:index>
 function create_default_slot_1(ctx) {
 	let div1;
 	let div0;
@@ -7299,7 +7299,7 @@ function create_default_slot_1(ctx) {
 	};
 }
 
-// (352:4) {#each errorHandlingOptions as eOption}
+// (354:4) {#each errorHandlingOptions as eOption}
 function create_each_block(ctx) {
 	let option;
 	let t_value = /*eOption*/ ctx[26] + "";
@@ -7324,7 +7324,7 @@ function create_each_block(ctx) {
 	};
 }
 
-// (351:2) <Select bind:node prop="errorHandling">
+// (353:2) <Select bind:node prop="errorHandling">
 function create_default_slot(ctx) {
 	let each_1_anchor;
 	let each_value = /*errorHandlingOptions*/ ctx[10];
@@ -7896,6 +7896,7 @@ RED.nodes.registerType("godaddy", {
 		if (this.name) return this.name; else if (this.operation) return this.operation; else return "godaddy";
 	},
 	oneditprepare() {
+		console.log(this);
 		render(this);
 	},
 	oneditsave() {
@@ -7907,6 +7908,7 @@ RED.nodes.registerType("godaddy", {
 		if (typeof clone.container === "undefined") clone.container = "";
 		if (typeof clone.environment === "undefined") clone.environment = "";
 		if (typeof clone.propagate === "undefined") clone.propagate = false;
+		if (clone.propagate) this._def.color = '#c02626';
 
 		// Workaround if JSON-Editor (ACE) was used -> more info in bottom code (on:change event for typedInput Parameters)
 		if (clone.saveTypedInputAgain) {
